--- a/Xbox.css
+++ b/Xbox.css
@@ -13,7 +13,7 @@
 
 
 .xbox.disconnected {
-    background: url(https://imgur.com/eFcpnqJ.png
+    background: url(https://imgur.com/eFcpnqJ.png)
 }
 
 
@@ -249,7 +249,7 @@
 
 
 .xbox .face {
-    background: url(xbox-assets/dpad.svg);
+    background: url(https://imgur.com/tNmFGvR.png);
     position: absolute;
     opacity: 0;
 }
