--- a/Xbox.css
+++ b/Xbox.css
@@ -1,5 +1,5 @@
 ﻿.controller.xbox {
-    background: url(https://imgur.com/PtQYzVU.png);
+    background: url(https://imgur.com/X2oecKq.png);
     height: 630px;
     width: 750px;
     /*    margin-left: -375px;
