--- a/Xbox.css
+++ b/Xbox.css
@@ -1,26 +1,22 @@
-﻿.controller.xbox {
-    background: url(https://imgur.com/X2oecKq.png);
+.controller.xbox {
+    background: url(https://imgur.com/t434Bkt.png);
     height: 630px;
     width: 750px;
     /*    margin-left: -375px;
         margin-top: -285px;*/
 }
 
-
 .xbox.white {
     background: url(xbox-assets/base-white.svg);
 }
 
-
 .xbox.disconnected {
-    background: url(https://imgur.com/eFcpnqJ.png)
+    background: url(xbox-assets/disconnected.svg);
 }
-
 
 .xbox.disconnected div {
     display: none;
 }
-
 
 .xbox .triggers {
     width: 446px;
@@ -29,34 +25,29 @@
     left: 152px;
 }
 
-
 .xbox .trigger {
     width: 88px;
     height: 121px;
-    background: url(https://imgur.com/ggrPBtZ.png);
+    background: url(xbox-assets/trigger.svg);
     opacity: 0;
 }
-
 
 .xbox .trigger.left {
     float: left;
     background-position: 0 0;
 }
 
-
 .xbox .trigger.right {
     float: right;
     transform: rotateY(180deg);
 }
 
-
 .xbox .bumper {
     width: 170px;
     height: 61px;
-    background: url(https://imgur.com/eZ8X9qC.png);
+    background: url(xbox-assets/bumper.svg);
     opacity: 0;
 }
-
 
 .xbox .bumpers {
     position: absolute;
@@ -66,23 +57,19 @@
     top: 129px;
 }
 
-
 .xbox .bumper.pressed {
     opacity: 1;
 }
 
-
 .xbox .bumper.left {
     float: left;
 }
-
 
 .xbox .bumper.right {
     float: right;
     -webkit-transform: rotateY(180deg);
     transform: rotateY(180deg);
 }
-
 
 .xbox .quadrant {
     position: absolute;
@@ -94,30 +81,25 @@
     z-index: 0;
 }
 
-
 .xbox .p0 {
     -webkit-transform: rotate(0deg);
     transform: rotate(0deg);
 }
-
 
 .xbox .p1 {
     -webkit-transform: rotate(90deg);
     transform: rotate(90deg);
 }
 
-
 .xbox .p2 {
     -webkit-transform: rotate(270deg);
     transform: rotate(270deg);
 }
 
-
 .xbox .p3 {
     -webkit-transform: rotate(180deg);
     transform: rotate(180deg);
 }
-
 
 .xbox .arrows {
     position: absolute;
@@ -127,30 +109,25 @@
     left: 306px;
 }
 
-
 .xbox .back, .xbox .start {
-    background: url(https://imgur.com/Whcwyhf.png);
+    background: url(xbox-assets/start-select.svg);
     width: 33px;
     height: 33px;
     opacity: 0;
 }
 
-
 .xbox .back.pressed, .xbox .start.pressed {
     opacity: 1;
 }
-
 
 .xbox .back {
     float: left;
 }
 
-
 .xbox .start {
     background-position: 33px 0px;
     float: right;
 }
-
 
 .xbox .abxy {
     position: absolute;
@@ -160,14 +137,12 @@
     left: 488px;
 }
 
-
 .xbox .button {
     position: absolute;
-    background: url(https://imgur.com/2FA6aXM.png);
+    background: url(xbox-assets/abxy.svg);
     width: 48px;
     height: 48px;
 }
-
 
 .xbox .button.pressed {
     background-position-y: -48px;
@@ -175,13 +150,11 @@
     opacity: 1;
 }
 
-
 .xbox .a {
     background-position: 0 0;
     top: 108px;
     left: 55px;
 }
-
 
 .xbox .b {
     background-position: -49px 0;
@@ -189,20 +162,17 @@
     right: 0px;
 }
 
-
 .xbox .x {
     background-position: -98px 0;
     top: 58px;
     left: 4px;
 }
 
-
 .xbox .y {
     background-position: 48px 0;
     left: 55px;
     top: 7px;
 }
-
 
 .xbox .sticks {
     position: absolute;
@@ -212,32 +182,27 @@
     left: 144px;
 }
 
-
 .xbox .stick {
     position: absolute;
-    background: url(https://imgur.com/QtpwWob.png);
+    background: url(xbox-assets/stick.svg);
     background-position: -85px 0;
     height: 83px;
     width: 83px;
 }
 
-
 .xbox .stick.pressed {
     background-position: 0 0;
 }
-
 
 .xbox .stick.left {
     top: 0;
     left: 0;
 }
 
-
 .xbox .stick.right {
     top: 113px;
     left: 288px;
 }
-
 
 .xbox .dpad {
     position: absolute;
@@ -247,18 +212,15 @@
     left: 223px;
 }
 
-
 .xbox .face {
-    background: url(https://imgur.com/tNmFGvR.png);
+    background: url(xbox-assets/dpad.svg);
     position: absolute;
     opacity: 0;
 }
 
-
 .xbox .face.pressed {
     opacity: 1;
 }
-
 
 .xbox .face.up {
     background-position: 34px 0;
@@ -268,14 +230,12 @@
     height: 56px;
 }
 
-
 .xbox .face.down {
     left: 38px;
     bottom: 0;
     width: 34px;
     height: 56px;
 }
-
 
 .xbox .face.left {
     background-position: 0 -93px;
@@ -285,7 +245,6 @@
     left: 0;
 }
 
-
 .xbox .face.right {
     background-position: 0 -57px;
     width: 55px;
@@ -294,11 +253,9 @@
     right: 0;
 }
 
-
 .xbox.half {
     margin-top: -315px;
 }
-
 
 .xbox {
     background: no-repeat center;
